added transport.h and transport.cpp, updated client to initalize transport

--- a/C7005_Client/client.ui
+++ b/C7005_Client/client.ui
@@ -218,6 +218,9 @@
      <string>Machine 1</string>
     </property>
     <property name="checked">
+     <bool>false</bool>
+    </property>
+    <property name="autoExclusive">
      <bool>true</bool>
     </property>
    </widget>
@@ -232,6 +235,9 @@
     </property>
     <property name="text">
      <string>Machine 2</string>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_net">
