--- a/C7005_Network/network.ui
+++ b/C7005_Network/network.ui
@@ -169,14 +169,37 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>100</y>
+      <x>220</x>
+      <y>170</y>
       <width>114</width>
       <height>32</height>
      </rect>
     </property>
     <property name="text">
      <string>Start</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_Delay">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>110</y>
+      <width>60</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Delay(ms)</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_Delay">
+    <property name="geometry">
+     <rect>
+      <x>422</x>
+      <y>108</y>
+      <width>70</width>
+      <height>21</height>
+     </rect>
     </property>
    </widget>
   </widget>
