--- a/C7005_Client/transportdebug.ui
+++ b/C7005_Client/transportdebug.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>TransportDebug</class>
  <widget class="QWidget" name="TransportDebug">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Debug</string>
   </property>
   <widget class="QTextEdit" name="textEdit">
    <property name="geometry">
